@@ -1,12 +1,7 @@
 {
-  "count": 21,
-  "uniques": 5,
+  "count": 20,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2025-02-04T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-02-05T00:00:00Z",
       "count": 1,
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2025-02-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
